# dpdk-udp-receiver

./: Cargo.toml  build.rs
src/: dpdk_safe.rs  dpdk_wrapper.c  main.rs
